main/backend-services/api/gateway (service mesh) (ingress controllers)/kong/code/guides/use-plugin-as-a-resource---declarative/ingress-rules-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-2
  annotations:
    konghq.com/strip-path: "true"
spec:
  rules:
    - http:
        paths:
          - path: /baz
            backend:
              serviceName: httpbin
              servicePort: 80
